samples/_failures_safe/1761522332_ace9d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a0d37ca.c: In function ‘main’:
./samples/SAFE/__tmp_0a0d37ca.c:167:26: error: expected ‘)’ at end of input
  167 |     process_tokens(tokens
      |                   ~      ^
      |                          )
./samples/SAFE/__tmp_0a0d37ca.c:167:5: error: too few arguments to function ‘process_tokens’
  167 |     process_tokens(tokens
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a0d37ca.c:121:6: note: declared here
  121 | void process_tokens(Token* tokens, int count, TokenHandler* handlers) {
      |      ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a0d37ca.c:167:5: error: expected declaration or statement at end of input
  167 |     process_tokens(tokens
      |     ^~~~~~~~~~~~~~
